...
                          'Flutter Starter',
                      style: Theme.of(context).textTheme.displaySmall!.copyWith(
                          color: Theme.of(context).colorScheme.background),
                    ),
                    actions: [
                      IconButton(
                          key: const Key('logoutButton'),
                          icon: const Icon(Icons.logout),
                          onPressed: () {
                            authenticationBloc.add(const UserLogOut());
                          }),
                    ],
                  ),
...
                                    errorWidget: (context, url, error) =>
                                        Image.network(
                                      AllImages().kDefaultImage,
                                    ),
                                  ),
                                  Switch(
                                    key: const Key('themeSwitch'),
                                    activeColor: Theme.of(context)
                                        .colorScheme
                                        .background,
                                    value: switchValue,
                                    onChanged: (value) {
                                      setState(() {
...
